--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-route": "^1.0.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.1",
-    "react-toggle-display": "^2.2.0"
+    "react-toggle-display": "^2.2.0",
+    "superagent": "^3.8.3"
   },
   "author": "Amal Hanif",
   "license": "ISC",
