--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "create-react-class": "^15.6.3",
     "editors": "^1.1.4",
     "faker": "^4.1.0",
     "immutability-helper": "^2.6.6",
-    "prop-types": "^15.6.1",
-    "react": "^16.2.0",
+    "oauth-signature": "^1.5.0",
+    "prop-types": "^15.6.2",
+    "randomstring": "^1.1.5",
+    "react": "^15.3.0",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-table-next": "^0.1.4",
     "react-bootstrap-table2-editor": "^0.1.2",
@@ -16,7 +19,7 @@
     "react-data-grid": "^3.0.11-next3726",
     "react-data-grid-addons": "^3.0.11",
     "react-dialog": "^1.0.2",
-    "react-dom": "^16.2.0",
+    "react-dom": "^15.3.0",
     "react-nested-route": "^1.0.0",
     "react-route": "^1.0.3",
     "react-router-dom": "^4.2.2",
