--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "editors": "^1.1.4",
     "faker": "^4.1.0",
     "immutability-helper": "^2.6.6",
+    "nodemon": "^1.18.2",
     "oauth-signature": "^1.5.0",
     "prop-types": "^15.6.2",
     "randomstring": "^1.1.5",
     "react": "^15.3.0",
+    "react-axios": "^2.0.0",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-table-next": "^0.1.4",
     "react-bootstrap-table2-editor": "^0.1.2",
@@ -23,7 +25,7 @@
     "react-nested-route": "^1.0.0",
     "react-route": "^1.0.3",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.1",
+    "react-scripts": "^1.1.4",
     "react-toggle-display": "^2.2.0",
     "superagent": "^3.8.3"
   },
